--- a/tucache-spring-boot-starter/pom.xml
+++ b/tucache-spring-boot-starter/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>parent</artifactId>
+        <artifactId>tutucache</artifactId>
         <groupId>co.tunan.tucache</groupId>
         <version>1.0.0</version>
     </parent>
@@ -14,6 +14,7 @@
     <packaging>jar</packaging>
 
     <dependencies>
+
         <dependency>
             <groupId>co.tunan.tucache</groupId>
             <artifactId>tucache-core</artifactId>
@@ -21,17 +22,11 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
-            <version>2.4.0</version>
-            <optional>true</optional>
+            <groupId>co.tunan.tucache</groupId>
+            <artifactId>tucache-spring-boot-autoconfigure</artifactId>
+            <version>1.0.0</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-autoconfigure</artifactId>
-            <version>2.3.5.RELEASE</version>
-        </dependency>
     </dependencies>
 
     <build>
