--- a/tucache-core/pom.xml
+++ b/tucache-core/pom.xml
@@ -5,10 +5,9 @@
     <parent>
         <artifactId>tutucache</artifactId>
         <groupId>co.tunan.tucache</groupId>
-        <version>1.0.0</version>
+        <version>1.0.1.RELEASE</version>
     </parent>
 
-    <version>1.0.0</version>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>tucache-core</artifactId>
