--- a/tucache-spring-boot-autoconfigure/pom.xml
+++ b/tucache-spring-boot-autoconfigure/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>tutucache</artifactId>
         <groupId>co.tunan.tucache</groupId>
-        <version>1.0.0</version>
+        <version>1.0.1.RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -17,6 +17,13 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>co.tunan.tucache</groupId>
+            <artifactId>tucache-core</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -29,12 +36,6 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.25</version>
             <optional>true</optional>
-        </dependency>
-
-        <dependency>
-            <groupId>co.tunan.tucache</groupId>
-            <artifactId>tucache-core</artifactId>
-            <version>1.0.0</version>
         </dependency>
 
         <dependency>
