--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
     <developers>
         <developer>
             <name>Trifolium wang</name>
-            <email>xudong1113@foxmail.com</email>
+            <email>trifolium.wang@foxmail.com</email>
             <organization>QQ Group 76131683</organization>
         </developer>
     </developers>
