:sparkles: 修改了旧版本框架的不合理问题，修复了框架BUG，修改了文档

--- a/tucache-spring-boot-autoconfigure/pom.xml
+++ b/tucache-spring-boot-autoconfigure/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>co.tunan.tucache</groupId>
             <artifactId>tucache-core</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
 
         <dependency>
