--- a/tucache-spring-boot-starter/pom.xml
+++ b/tucache-spring-boot-starter/pom.xml
@@ -18,19 +18,19 @@
         <dependency>
             <groupId>co.tunan.tucache</groupId>
             <artifactId>tucache-core</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
 
         <dependency>
             <groupId>co.tunan.tucache</groupId>
             <artifactId>tucache-spring-boot-autoconfigure</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
 
     </dependencies>
 
     <build>
-        <finalName>tucache-spring-boot-starter.${project.version}</finalName>
+        <finalName>tucache-spring-boot-starter.${project.parent.version}</finalName>
     </build>
 
 </project>
