--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <!--
   ~ The MIT License (MIT)
   ~
-  ~ Copyright (c) [2020] wangxudong xudong1113@foxmail.com
+  ~ Copyright (c) [2020] trifolium trifolium.wang@foxmail.com
   ~
   ~ Permission is hereby granted, free of charge, to any person obtaining a copy
   ~ of this software and associated documentation files (the "Software"), to deal
