:pencil: 添加了一些简单的使用样例

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <module>tucache-core</module>
         <module>tucache-spring-boot-starter</module>
         <module>tucache-spring-boot-autoconfigure</module>
+        <module>example</module>
     </modules>
 
     <packaging>pom</packaging>
