--- a/example/pom.xml
+++ b/example/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>tutucache</artifactId>
         <groupId>co.tunan.tucache</groupId>
-        <version>1.0.2.RELEASE</version>
+        <version>1.0.3.RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>co.tunan.tucache</groupId>
             <artifactId>tucache-spring-boot-starter</artifactId>
-            <version>1.0.2.RELEASE</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
