--- a/example/pom.xml
+++ b/example/pom.xml
@@ -11,12 +11,15 @@
 
     <artifactId>example</artifactId>
 
+    <properties>
+        <spring.boot.version>2.6.3</spring.boot.version>
+    </properties>
     <dependencies>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-dependencies</artifactId>
-            <version>2.2.6.RELEASE</version>
+            <version>${spring.boot.version}</version>
             <type>pom</type>
             <scope>provided</scope>
         </dependency>
@@ -24,13 +27,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>2.2.6.RELEASE</version>
+            <version>${spring.boot.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
-            <version>2.2.6.RELEASE</version>
+            <version>${spring.boot.version}</version>
         </dependency>
 
         <dependency>
@@ -45,7 +48,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.0.7.RELEASE</version>
+                <version>2.6.3</version>
                 <executions>
                     <execution>
                         <goals>
