--- a/tucache-spring-boot-autoconfigure/pom.xml
+++ b/tucache-spring-boot-autoconfigure/pom.xml
@@ -11,8 +11,8 @@
     <artifactId>tucache-spring-boot-autoconfigure</artifactId>
 
     <properties>
-        <spring.boot.version>2.1.1.RELEASE</spring.boot.version>
-        <spring.data.redis.version>2.1.3.RELEASE</spring.data.redis.version>
+        <spring.boot.version>2.6.3</spring.boot.version>
+        <spring.data.redis.version>2.6.1</spring.data.redis.version>
     </properties>
 
     <dependencies>
@@ -26,14 +26,14 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.30</version>
+            <version>2.0.5</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>1.7.25</version>
+            <version>2.0.5</version>
             <optional>true</optional>
         </dependency>
 
