:art: 兼容springBoot3的配置文件，添加了Caffeine和Local两种缓存实现，使其可以根据依赖自动推断使用最有的缓存组件，用户也可以手动指定使用的缓存组件，做了一些更加细节的代码，引入了lombok

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,14 @@
         <java.version>8</java.version>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
