--- a/tucache-core/pom.xml
+++ b/tucache-core/pom.xml
@@ -13,8 +13,10 @@
     <artifactId>tucache-core</artifactId>
 
     <properties>
-        <spring.version>5.1.3.RELEASE</spring.version>
-        <spring.data.redis.version>2.1.3.RELEASE</spring.data.redis.version>
+        <spring.version>5.3.29</spring.version>
+        <spring.data.redis.version>2.7.15</spring.data.redis.version>
+        <slf4j.version>1.7.36</slf4j.version>
+        <caffeine.version>2.9.3</caffeine.version>
     </properties>
 
     <packaging>jar</packaging>
@@ -24,18 +26,9 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>2.0.5</version>
-            <scope>provided</scope>
+            <version>${slf4j.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>2.0.5</version>
-            <optional>true</optional>
-        </dependency>
-
-        <!-- spring的大部分依赖都在此,并且项目支持AOP -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
@@ -44,22 +37,23 @@
         </dependency>
 
         <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.7</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-redis</artifactId>
             <version>${spring.data.redis.version}</version>
-            <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjweaver</artifactId>
-            <version>1.9.5</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjrt</artifactId>
-            <version>1.9.5</version>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>${caffeine.version}</version>
+            <optional>true</optional>
         </dependency>
 
     </dependencies>
