--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
     </developers>
 
     <properties>
-        <revision>1.0.4.SNAPSHOT</revision>
+        <revision>1.0.4-SNAPSHOT</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>8</java.version>
