--- a/tucache-spring-boot-starter/pom.xml
+++ b/tucache-spring-boot-starter/pom.xml
@@ -25,6 +25,22 @@
 
     <build>
         <finalName>tucache-spring-boot-starter.${project.version}</finalName>
+
+        <plugins>
+            <plugin>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.1.2</version>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Build-Time>${maven.build.timestamp}</Build-Time>
+                            <Automatic-Module-Name>tucache.spring.boot.starter</Automatic-Module-Name>
+                            <License>MIT</License>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
