--- a/tucache-core/pom.xml
+++ b/tucache-core/pom.xml
@@ -67,9 +67,9 @@
 
     <build>
         <finalName>tucache-core.${project.version}</finalName>
-
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.1.2</version>
                 <configuration>
