--- a/tucache-spring-boot-starter/pom.xml
+++ b/tucache-spring-boot-starter/pom.xml
@@ -28,6 +28,7 @@
 
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.1.2</version>
                 <configuration>
