:art: 整理了一些代码和日志提示，准备发布1.0.4-SNAPSHOT

--- a/example/src/main/resources/application.yml
+++ b/example/src/main/resources/application.yml
@@ -16,19 +16,12 @@ server:
 #        max-wait: 5000ms
 #        min-idle: 0
 #        max-idle: 2
-#tucache:
-#  profiles:
-#    cache-prefix: "prefix_key_test:"
-#    pool:
-#      core-thread-num: 2
-#    enable-debug-log: true
-#  cache-type: redis
 
 logging:
   level:
     co.tunan.tucache: debug
-  file:
-    name: logs/log.log
+#  file:
+#    name: logs/log.log
 
 tucache:
   profiles:
@@ -36,4 +29,4 @@ tucache:
     pool:
       core-thread-num: 2
     enable-debug-log: true
-  cache-type: local
+  cache-type: auto
