:pencil: 准备1.0.5版本

--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
     </developers>
 
     <properties>
-        <revision>1.0.4</revision>
+        <revision>1.0.5-SNAPSHOTS</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>8</java.version>
