--- a/example/pom.xml
+++ b/example/pom.xml
@@ -13,6 +13,7 @@
 
     <properties>
         <spring.boot.version>2.7.15</spring.boot.version>
+        <maven.deploy.skip>true</maven.deploy.skip>
     </properties>
 
     <dependencyManagement>
