:bug: 修复了严重的版本管理bug

--- a/example/pom.xml
+++ b/example/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>tutucache</artifactId>
         <groupId>co.tunan.tucache</groupId>
-        <version>${revision}</version>
+        <version>1.0.5-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
