--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
 
 
     <name>tutu-cache</name>
-    <url>https://github.com/trifolium-wang/tutu-cache</url>
+    <url>https://github.com/trifolium-x/tutu-cache</url>
     <description>tutu-cache 是一个简单易用的Spring缓存注解</description>
 
     <licenses>
@@ -52,15 +52,15 @@
         </license>
     </licenses>
     <scm>
-        <connection>scm:git:https://github.com/trifolium-wang/tutu-cache.git</connection>
-        <developerConnection>scm:git:https://github.com/trifolium-wang/tutu-cache.git</developerConnection>
-        <url>https://github.com/trifolium-wang/tutu-cache</url>
+        <connection>scm:git:https://github.com/trifolium-x/tutu-cache.git</connection>
+        <developerConnection>scm:git:https://github.com/trifolium-x/tutu-cache.git</developerConnection>
+        <url>https://github.com/trifolium-x/tutu-cache</url>
         <tag>HEAD</tag>
     </scm>
 
     <developers>
         <developer>
-            <name>Trifolium Wang</name>
+            <name>trifolium</name>
             <email>trifolium.wang@gmail.com</email>
             <organization>QQ Group 76131683</organization>
         </developer>
