:boom: 太穷了，域名续费不起，只能用github的域名了。

--- a/example/src/main/resources/application.yml
+++ b/example/src/main/resources/application.yml
@@ -19,7 +19,7 @@ server:
 
 logging:
   level:
-    co.tunan.tucache: debug
+    io.github.tri5m.tucache: debug
 #  file:
 #    name: logs/log.log
 
