--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>co.tunan.tucache</groupId>
-    <artifactId>tutucache</artifactId>
+    <groupId>io.github.tri5m</groupId>
+    <artifactId>tucache</artifactId>
     <version>1.0.5-SNAPSHOT</version>
     <modules>
         <module>tucache-core</module>
@@ -41,7 +41,7 @@
 
 
     <name>tutu-cache</name>
-    <url>https://github.com/trifolium-x/tutu-cache</url>
+    <url>https://github.com/tri5m/tutu-cache</url>
     <description>tutu-cache 是一个简单易用的Spring缓存注解</description>
 
     <licenses>
@@ -52,9 +52,9 @@
         </license>
     </licenses>
     <scm>
-        <connection>scm:git:https://github.com/trifolium-x/tutu-cache.git</connection>
-        <developerConnection>scm:git:https://github.com/trifolium-x/tutu-cache.git</developerConnection>
-        <url>https://github.com/trifolium-x/tutu-cache</url>
+        <connection>scm:git:https://github.com/tri5m/tutu-cache.git</connection>
+        <developerConnection>scm:git:https://github.com/tri5m/tutu-cache.git</developerConnection>
+        <url>https://github.com/tri5m/tutu-cache</url>
         <tag>HEAD</tag>
     </scm>
 
@@ -62,7 +62,7 @@
         <developer>
             <name>trifolium</name>
             <email>trifolium.wang@gmail.com</email>
-            <url>https://github.com/trifolium-x</url>
+            <url>https://github.com/tri5m</url>
             <organization>QQ Group 76131683</organization>
             <timezone>+8</timezone>
         </developer>
@@ -70,7 +70,7 @@
 
     <issueManagement>
         <system>github</system>
-        <url>https://github.com/trifolium-x/tutu-cache/issues</url>
+        <url>https://github.com/tri5m/tutu-cache/issues</url>
     </issueManagement>
 
     <properties>
