--- a/example/pom.xml
+++ b/example/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>tutucache</artifactId>
-        <groupId>co.tunan.tucache</groupId>
+        <groupId>io.github.tri5m</groupId>
+        <artifactId>tucache</artifactId>
         <version>1.0.5-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -53,7 +53,7 @@
 <!--        </dependency>-->
 
         <dependency>
-            <groupId>co.tunan.tucache</groupId>
+            <groupId>io.github.tri5m</groupId>
             <artifactId>tucache-spring-boot-starter</artifactId>
             <version>${project.version}</version>
         </dependency>
