--- a/tucache-spring-boot-starter/pom.xml
+++ b/tucache-spring-boot-starter/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.github.tri5m</groupId>
         <artifactId>tucache</artifactId>
-        <version>1.0.5</version>
+        <version>1.0.6.rc1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
